public/css/modal-file-content.css
  @property --modal-top-bottom-margin {
    /* the only reason we declare this as a prop is so we can animate with a transition */
    syntax: '<length>';
    inherits: true;
    initial-value: 20px;
  }

#file-content-modal {
  /* Remove default centering and ensure it covers the viewport for correct positioning */
  position: fixed;
  border: none;
  margin: 0px;
  top: 0px;
  left: 0px;
  height: 100vh;
  width: 100vw;
  color: var(--colour-contr);
  background: transparent;
  --modal-footer-height: 50px; /* nothing in here yet but later will be set to 50px and have an option to show plaintext or markdown */
  --modal-header-height: 40px;
}

#moving-file-content-container {
  /* Mandatory CSS property */
/*  view-transition-name: moving-box-element;*/
  position: fixed;
  background-color: var(--colour-neutral-alt);
  border-radius: 10px;
/*  max-height: 95vh;*/
  pointer-events: auto;
  /* stuff below to blend in scroll bar*/
/*  border-top: solid 2px var(--colour-neutral-alt);
  border-right: solid 2px var(--colour-neutral-alt);*/
  border-radius: 8px;
  overflow: hidden;
  background-color: var(--colour-neutral-alt); /* starting colour */
  left: 50%;
  transform: translateX(-50%);
  top: var(--modal-top-bottom-margin);
  width: 65ch;
  max-width:100%;
  transition: width var(--maximise-modal-transition), --modal-top-bottom-margin var(--maximise-modal-transition);
  border: 2px, solid, transparent; /* create space for later */
  /*  height: 95vh;*/

  &:has(#modal-content-text:focus-within){ /* provide subtle visual indicator */
	  border: 2px, solid, var(--colour-contr);
  }
}

body{
  --modal-top-bottom-margin: 20px;
  --maximise-modal-transition: 0.2s;

  @media (max-width: 600px) {
    /* to allow open dialog to take up fall screen space on small screens */
    /* note 600px figure also used on scrollbar-gutter but can't put css vars in media queries so hard coded */
    --modal-top-bottom-margin: 0px;
  }
  
  :has(#modalmaxscreen:checked) #moving-file-content-container {
    /* tick the box for modal maximise, mainly useful for viewing svg diagrams */
    --modal-top-bottom-margin: 0px;
    width: 100%;
  }

}

html {
  --file-content-transition-speed: 2;
}

::view-transition-group(moving-box-element) {
  animation-duration: calc(2s / var(--file-content-transition-speed));
  animation-timing-function: linear(0, 0.03 1.1%, 0.124 2.4%, 0.889 9.8%, 1.031 12.4%, 1.094 15.2%, 1.101 16.6%, 1.096 18.1%, 1.014 26.1%, 0.991 31.7%, 1.001 48.1%, 1);
}

::view-transition-new(moving-box-element),
::view-transition-old(moving-box-element) {
  opacity: 1; /* allegedly needed for smooth transition but don't see it myself */
  transform: none; /* allegedly needed for smooth transition but don't see it myself */
  height: 100%; /* to make sure size doesn't jump */
  width: 100%;
/*  object-fit: fill;*/
  animation-duration: calc(
    0.7s / var(--file-content-transition-speed)
  ); /* makes content switch over more quickly if shorter than group duration */
}

/* by applying first to target element then to modal we can animate from one to the other  */
.moving-file-content-view {
  view-transition-name: moving-box-element;
}

#modal-content {
  overflow-y: scroll;
  height:calc(100dvh - var(--modal-header-height) - calc(2 * var(--modal-top-bottom-margin)) ); /* if modal footer takes up space later will need to minus var(--modal-footer-height) */
  padding: 0px 20px 0px 20px;
  margin-bottom: calc( var(--modal-footer-height) - var(--modal-footer-height)) ; /* leave room for footer */
  margin-top: var(--modal-header-height); /* leave room for footer */
}

#modal-content-text {
  margin-bottom: 200px; /* to allow scrolling below last bit of text for easier reading */

  & > pre {
    outline: none; /* focus-within targets parent element border*/
  }
}

